@@ -4,6 +4,8 @@ ikiwiki (2.55) UNRELEASED; urgency=low
     converted. (Simon McVittie)
   * editpage: Don't show attachments link when attachments are disabled.
   * All rcs backends need to implement rcs_remove. (Done for svn, git).
+  * remove: New plugin that adds the ability to remove pages via the web.
+    (Sponsored by The TOVA Company.)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 21 Jul 2008 11:35:46 -0400
 
